--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,102 @@
-/* You can add global styles to this file, and also import other style files */
+#title {
+    margin: auto;
+    width: 750px;
+    justify-content: center;
+    display: flex;
+    font-size: 40px;
+}
+
+#game-data {
+    width: 750px;
+    height: 50px;
+    margin: auto;
+}
+
+#score, #timer, #restart, #nextRound {
+    float: left;
+    margin-left: 15px;
+}
+
+#chain, #round {
+    float: right;
+    margin-right: 15px;
+}
+
+#game-area {
+    width: 750px;
+    border: 1px solid black;
+    height: 500px;
+    margin: auto;
+}
+
+#deck {
+    margin-left: 40px;
+    margin-top: 15px;
+    float: right;
+}
+
+#deck .card {
+    float: left;
+    margin-left: -40px;
+}
+
+.peak .card {
+    float: left;
+    margin-left: 10px;
+}
+
+#active-card {
+    float: left;
+    margin-left: 15px;
+    margin-top: 15px;
+}
+
+.card {
+    border: 1px solid black;
+    width: 50px;
+    height: 65px;
+}
+
+span.card-value {
+    font-size: 16px;
+    margin-left: 5px;
+}
+
+.black-suit {
+    color: black;
+}
+
+.red-suit {
+    color: red;
+}
+
+.card-face-down {
+    background-size: 6px 6px !important;
+    background-image: linear-gradient(-45deg, rgba(0, 0, 0, 0) 46%, blue 49%, blue 51%, rgba(0, 0, 0, 0) 55%);
+    width: 50px;
+    height: 65px
+}
+
+.removed-card {
+    width: 50px;
+    height: 65px;
+    z-index: -1;
+}
+
+.peak {
+    width: 33%;
+    float: left;
+    height: 400px;
+    margin-left: -30px;
+}
+
+#peaks {
+    padding-left: 98px;
+}
+
+.row {
+    width: 100%;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+}
